--- a/books/templates/book_detail.html
+++ b/books/templates/book_detail.html
@@ -1,39 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Document</title>
-    <style>
-        .middle{
-            margin-left: 100px;
-        }
-    
-        .title{
-            color: chocolate;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
 
-        .txt{
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: rgb(215,88,14);
-            background: linear-gradient(90deg, rgba(215,88,14,1) 30%, rgba(242,141,160,1) 49%, rgba(232,11,164,1) 100%);
-            border-radius: 10px;
-        }
+{% extends "base.html" %}x
 
-        .card-img-top{
-            border-radius: 15px;
-        }
-    </style>
-</head>
-<body>
-    
+    {% block content %} 
+ 
     <h1 style="text-align: center;" class="middle mt-3 mb-3">Book Detail Pages</h1>
 
     
-
         <div class="row">
             <div class="col-md-3 mb-4 middle">
                     <img src="{{ book.cover_pic.url }}" class="card-img-top" alt="{{ book.title }} cover">
@@ -46,6 +19,6 @@
             </div>
                 
             </div>
-    
+            {% endblock content %}
 </body>
 </html>
