--- a/books/templates/books.html
+++ b/books/templates/books.html
@@ -7,6 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
+    {% block content %} 
+    
+    {% endblock content %}
+    
     <h1 style="text-align: center;" class="middle mt-3 mb-3">Books</h1>
     <div class="container">
         <div class="row">
